# opencti-connector

./: .env_example  .gitignore  AGENTS.md  DOCKERHUB.md  Dockerfile  LICENSE  README.md  config.yml  config.yml.sample  config_example.yml  connector.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-ci.yml  release.yml
__metadata__/: connector_manifest.json
dep_connector/: __init__.py  client_api.py  config_loader.py  connector.py  converter_to_stix.py  models.py
tests/: test_api_spec_datasets.py  test_connector_datasets.py  test_connector_runtime.py  test_converter_core.py  test_converter_labels.py
