[project]
name = "opencti-connector"
version = "0.1.0"
description = "The Double Extortion connector ingests ransomware and data leak announcements published on the DoubleExtortion platform and converts them into STIX entities inside OpenCTI."
authors = [{ name = "Luca Mella", email = "lm@digintlab.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["pycti>=6.8.13", "pyyaml>=6.0.3", "requests>=2.32.5"]

[project.urls]
Homepage = "https://github.com/DigintLab/opencti-connector"
Repository = "https://github.com/DigintLab/opencti-connector"
Documentation = "https://github.com/DigintLab/opencti-connector/blob/main/README.md"

[dependency-groups]
dev = ["mypy[faster-cache]>=1.17.1", "ruff>=0.12.7", "pydantic>=2.11.7"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
output-format = "github"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = ["COM812", "D1", "D2", "D4", "ERA001", "FIX002", "PLR0913", "TD003"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 160

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true

[tool.pylint."MESSAGES CONTROL"]
persistent = "no"
disable = ["fixme", "line-too-long"]
